--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://srinuvasu-brs.github.io/meditation-reactjs/",
   "name": "meditation",
   "version": "0.1.0",
   "private": true,
